:bug: fix scrollbar bug

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,10 @@
 	box-sizing: border-box;
 	font-family: Roboto, sans-serif;
 }
+
+html,
+body {
+	height: 100vh;
+	width: 100vw;
+	overflow: hidden;
+}
